Henri Russian LARPLARPLARP fixes and localization

--- a/localisation/T_RUS_l_english.yml
+++ b/localisation/T_RUS_l_english.yml
@@ -147,3 +147,61 @@
     henri_rus_larp.16.t:0 "Lack of Ports"
     henri_rus_larp.16.d:0 "The critical lack of ports has deeply hurt our trade and import of technology. Until we can open up trade networks to the West, the blockade will hurt us! We have been forced to rely on the strength of our people and boyars in lieu of this chronic situation"
     henri_rus_larp.16.a:0 "The enemies of the Rus will pay, we will not be left in the backwater of history"
+ #Fixes
+ T_RUS_winter_tactics_title:0 "Winter Tactics"
+ T_RUS_winter_tactics_desc:0 ""
+ arctic_trade_title:0 "Arctic Trade"
+ arctic_trade_desc:0 ""
+ kola_fort_title:0 "Kola Fort"
+ kola_fort_desc:0 ""
+ T_RUS_winter_training_tt:0 "§Y[Root.GetName]§! gets '§YElite Winter Tactics§!' during the months of §YNovember§! through §YMarch§!, giving the following effects:\nLand Attrition: §G-25.0%§!\nMovement Speed: §G+10.0%§!\nShock Damage: §G+10.0%§!"
+ T_RUS_elite_winter_tactics_ptmod:0 "Elite Winter Tactics"
+ desc_T_RUS_elite_winter_tactics_ptmod:0 ""
+ steppe_raids:0 "Steppe Raids"
+ desc_steppe_raids:0 ""
+ backwards_society:0 "Backwards Society"
+ desc_backwards_society:0 ""
+ vyatkan_wilds:0 "Viatkan Wilds"
+ desc_vyatkan_wilds:0 ""
+ makariev_fair:0 "Makariev Fair"
+ desc_makariev_fair:0 ""
+ kazani_kremlin_mod:0 "Kazani Kremlin"
+ desc_kazani_kremlin_mod:0 ""
+ integrated_tatar_nobles:0 "Integrated Tatar Nobles"
+ desc_integrated_tatar_nobles:0 ""
+ found_novorossiya:0 "Found Novorossiyaa"
+ desc_found_novorossiya:0 ""
+ integrate_the_tatars:0 "Integrate the Tatars"
+ desc_integrate_the_tatars:0 ""
+ siberian_decline:0 "Siberian Decline"
+ desc_siberian_decline:0 ""
+ break_the_crimeans:0 "Break the Crimeans"
+ desc_break_the_crimeans:0 ""
+ defeat_the_raids:0 "Defeat the Raids"
+ desc_defeat_the_raids:0 ""
+ strengthen_the_line:0 "Strengthen the Line"
+ desc_strengthen_the_line:0 ""
+ gate_to_the_orient:0 "Gate to the Orient"
+ desc_gate_to_the_orient:0 ""
+ annex_GOL:0 "Annexation of the Great Horde"
+ desc_annex_GOL:0 ""
+ raiding_repreeve_gol:0 "Reprieve from Raids"
+ desc_raiding_repreeve_gol:0 ""
+ prepare_for_warGOL:0 "Great Horde War Preparations"
+ desc_prepare_for_warGOL:0 ""
+ smolensk_armory:0 "Smolensk Armory"
+ desc_smolensk_armory:0 ""
+ collapse_poland:0 "Collapse of Poland"
+ desc_collapse_poland:0 ""
+ livonian_conquest:0 ""
+ desc_livonian_conquest:0 ""
+ neva_strengthened:0 "Neva Strengthened"
+ desc_neva_strengthened:0 ""
+ isolationist_1:0 "Isolation: Level 1"
+ isolationist_2:0 "Isolation: Level 2"
+ isolationist_3:0 "Isolation: Level 3"
+ isolationist_4:0 "Isolation: Level 4"
+ open_1:0 "Westernization: Level 1"
+ open_2:0 "Westernization: Level 2"
+ open_3:0 "Westernization: Level 3"
+ open_4:0 "Westernization: Level 4"
