--- a/localisation/X_l_english.yml
+++ b/localisation/X_l_english.yml
@@ -15,13 +15,13 @@
  X_estate_burghers_privilege_1:0 "Organized Slave Markets"
  X_estate_burghers_privilege_1_desc:0 ""
  #Tooltips
- X_estate_cossacks_privilege_1_on_granted_tt:0 "Every owned province of §lFlatland§! terrain in the §YRuthenia§! region or §YSteppes§! terrain with a §YFort§! gains '§YCossack Border Defense§!', giving the following effects:\nLocal Defensiveness: §G+15.0%§!\nLocal Garrison Size: §G+50.0%§!\nLocal Fort Maintenance: §G-75.0%§!"
+ X_estate_cossacks_privilege_1_on_granted_tt:0 "Every owned province of §lFlatland§! terrain in the §YRuthenia§! region or §YSteppes§! terrain with a §YFort§! gets '§YCossack Border Defense§!', giving the following effects:\nLocal Defensiveness: §G+15.0%§!\nLocal Garrison Size: §G+50.0%§!\nLocal Fort Maintenance: §G-75.0%§!"
  X_estate_cossacks_privilege_1_on_revoked_tt:0 "Remove '§YCossack Border Defense§!' from every owned province of §lFlatland§! terrain in the §YRuthenia§! region or §YSteppes§! terrain with a §YFort§!."
  X_estate_cossacks_privilege_2_on_granted_tt:0 "Cossack raiders will sporadically raid our Heathen neighbors, plundering their wealth."
  X_estate_cossacks_privilege_2_on_revoked_tt:0 "Cossack raiders will no longer raid our Heathen neighbors."
  X_cossack_raid_tt:0 "The §Y[x_estate_cossacks_privilege_2_country_event_target.GetAdjective]§! Cossacks looted §Y[Root.X_cossack_raid_total_development_localization_variable.GetValue]§!¤ from our treasury."
  X_cossack_raid_tt2:0 "[From.GetXCossackLootAmountTT]"
- X_estate_burghers_privilege_1_on_granted_tt:0 "Every owned province producing §YSlaves§! gains '§YKhan's Savga§!', giving the following effects:\nLocal Production Efficiency: §G+75.0%§!"
+ X_estate_burghers_privilege_1_on_granted_tt:0 "Every owned province producing §YSlaves§! gets '§YKhan's Savga§!', giving the following effects:\nLocal Production Efficiency: §G+75.0%§!"
  X_estate_burghers_privilege_1_on_revoked_tt:0 "Remove '§YKhan's Savga§!' from every owned province producing §YSlaves§!."
  #Modifiers
  X_estate_cossacks_privilege_1_pmod:0 "Cossack Border Defense"
@@ -262,7 +262,7 @@
  X_CRI_reform_3:0 "Enhance Development"
  X_CRI_reform_3_title:0 "Enhance Development"
  X_CRI_reform_3_desc:0 ""
- X_CRI_reform_3_tt:0 "§WEvery owned province of §YSteppes§! terrain gains '§YSteppes Development§!', giving the following effects:\nLocal Development Cost: §G-5.0%§!§!"
+ X_CRI_reform_3_tt:0 "§WEvery owned province of §YSteppes§! terrain gets '§YSteppes Development§!', giving the following effects:\nLocal Development Cost: §G-5.0%§!§!"
  X_CRI_reform_3_tt2:0 "Remove '§YSteppes Development§!' from every owned §YSteppes§! province."
  X_CRI_reform_4:0 "Organize Gerege Filing"
  X_CRI_reform_4_title:0 "Organize Gerege Filing"
@@ -275,7 +275,7 @@
  X_CRI_reform_6:0 "Appease the Qadi Esker"
  X_CRI_reform_6_title:0 "Appease the Qadi Esker"
  X_CRI_reform_6_desc:0 ""
- X_CRI_reform_6_tt:0 "§WEvery owned province of §YChristian§! faith gains '§YKharaj§!', giving the following effects:\nLocal Tax Modifier: §G+33.0%§!§!"
+ X_CRI_reform_6_tt:0 "§WEvery owned province of §YChristian§! faith gets '§YKharaj§!', giving the following effects:\nLocal Tax Modifier: §G+33.0%§!§!"
  X_CRI_reform_6_tt2:0 "Remove '§YKharaj§!' from every owned province of §YChristian§! faith."
  X_CRI_reform_7:0 "Open Uluhane Bureaucracy"
  X_CRI_reform_7_title:0 "Open Uluhane Bureaucracy"
