--- a/localisation/T_RUS_l_english.yml
+++ b/localisation/T_RUS_l_english.yml
@@ -157,6 +157,10 @@
  T_RUS_winter_training_tt:0 "§Y[Root.GetName]§! gets '§YElite Winter Tactics§!' during the months of §YNovember§! through §YMarch§!, giving the following effects:\nLand Attrition: §G-25.0%§!\nMovement Speed: §G+10.0%§!\nShock Damage: §G+10.0%§!"
  T_RUS_elite_winter_tactics_ptmod:0 "Elite Winter Tactics"
  desc_T_RUS_elite_winter_tactics_ptmod:0 ""
+ kola_port:0 "Kola Port"
+ desc_kola_port:0 ""
+ settle_siberia:0 "Settle Siberia"
+ desc_settle_siberia:0 ""
  steppe_raids:0 "Steppe Raids"
  desc_steppe_raids:0 ""
  backwards_society:0 "Backwards Society"
