Novgorod now conquered in one way, adjustments and optimizations for Henri Russia

--- a/localisation/T_RUS_l_english.yml
+++ b/localisation/T_RUS_l_english.yml
@@ -78,11 +78,6 @@
     henri_rus_larp.1.a:0 "Support Qasim Khan"
     henri_rus_larp.1.b:0 "Let them sort it out among themselves"
 
-
-    henri_rus_larp.2.t:0 "Wilds Of Vyatka"
-    henri_rus_larp.2.d:0 "While technically a part of the Muscovite realm, the wilds of Vyatka's allegiance is far from strong. They refuse to pay taxes, and cooperate with the Knayz's policies. Udmurt influence runs deep in the region, with Orthodoxy often only skin deep and the church weak. Constant violence between the Vyatkan's and their Udmurt allies and the towns of Volgoda threatens to put the entire region in peril. They even seek to strike bargains with the Khanate of Kazan! We will have to deal with them, or face the consequences."
-    henri_rus_larp.2.a:0 "We must bring these rebels to heel!"
-
     henri_rus_larp.3.t:0 "The Steppe Horror"
     henri_rus_larp.3.d:0 "The borderlands suffer horribly at the hands of the Great Horde, Kazani, Crimean and Nogai war bands. Mothers watch as their sons are crushed to death, their husbands slaughtered, their daughters carted off to satisfy the cruel desires of a heartless people. To say the Rus of the border regions suffer horribly, is the greatest understatement. Only the end of the Tatar yoke, and the liberation of the slaves held by them will end this terror. "
     henri_rus_larp.3.a:0 "May Christ watch over these poor souls!"
@@ -157,7 +152,7 @@
  T_RUS_winter_training_tt:0 "§Y[Root.GetName]§! gets '§YElite Winter Tactics§!' during the months of §YNovember§! through §YMarch§!, giving the following effects:\nLand Attrition: §G-25.0%§!\nMovement Speed: §G+10.0%§!\nShock Damage: §G+10.0%§!"
  T_RUS_elite_winter_tactics_ptmod:0 "Elite Winter Tactics"
  desc_T_RUS_elite_winter_tactics_ptmod:0 ""
- kola_port:0 "Kola Port"
+ kola_port:0 "Port of Kola"
  desc_kola_port:0 ""
  settle_siberia:0 "Settle Siberia"
  desc_settle_siberia:0 ""
@@ -165,8 +160,8 @@
  desc_steppe_raids:0 ""
  backwards_society:0 "Backwards Society"
  desc_backwards_society:0 ""
- vyatkan_wilds:0 "Viatkan Wilds"
- desc_vyatkan_wilds:0 ""
+ vyatkan_wilds:0 "Vyatkan Wilds"
+ desc_vyatkan_wilds:0 "While technically a part of the Muscovite realm, the wilds of Vyatka's allegiance is far from strong. They refuse to pay taxes, and cooperate with the Knayz's policies. Udmurt influence runs deep in the region, with Orthodoxy often only skin deep and the church weak. Constant violence between the Vyatkan's and their Udmurt allies and the towns of Volgoda threatens to put the entire region in peril. They even seek to strike bargains with the Khanate of Kazan! We will have to deal with them, or face the consequences."
  makariev_fair:0 "Makariev Fair"
  desc_makariev_fair:0 ""
  kazani_kremlin_mod:0 "Kazani Kremlin"
@@ -209,3 +204,10 @@
  open_2:0 "Westernization: Level 2"
  open_3:0 "Westernization: Level 3"
  open_4:0 "Westernization: Level 4"
+ udmurt:0 "Udmurt"
+ mari:0 "Mari"
+ mordvin:0 "Mordvin"
+ meschyora:0 "Meschyora"
+ chuvash:0 "Chuvash"
+ swedish_baltic_domination:0 "Swedish Domination of the Baltic"
+ desc_swedish_baltic_domination:0 ""
