Little Timmy goes to Prague

--- a/localisation/gecko_trade_l_english.yml
+++ b/localisation/gecko_trade_l_english.yml
@@ -36,7 +36,8 @@
  tunis:0 "Algiers"
  genua:0 "Italy"
  wien:0 "Wien"
- gc_south_germany_tradenode:0 "Wurttemberg"
+ saxony:0 "Prague"
+ gc_south_germany_tradenode:0 "Swabia"
  pest:0 "Pest"
  rheinland:0 "Rheinland"
  chesapeake_bay:0 "Chesapeake Bay"
@@ -100,6 +101,9 @@
  trade_company_rheinland:0 "Rhineland Charter"
  TRADE_COMPANY_RHEINLAND_Root_Culture_GetName:0 "[Root.Culture.GetName] Rhineland Company"
  TRADE_COMPANY_RHEINLAND_European_Trade_Company:0 "Rhineland Trade company"
+ trade_company_saxony:0 "Prague Charter"
+ TRADE_COMPANY_SAXONY_Root_Culture_GetName:0 "[Root.Culture.GetName] Prague Company"
+ TRADE_COMPANY_SAXONY_European_Trade_Company:0 "Prague Trade Company"
  trade_company_wien:0 "Austrian Charter"
  TRADE_COMPANY_WIEN_Root_Culture_GetName:0 "[Root.Culture.GetName] Austria Company"
  TRADE_COMPANY_WIEN_European_Trade_Company:0 "Austria Trade Company"
