centers of bohemia

--- a/localisation/gecko_prov_names_l_english.yml
+++ b/localisation/gecko_prov_names_l_english.yml
@@ -75,7 +75,7 @@
  PROV6102:0 "Kourim"
  PROV6103:0 "Slany"
  PROV6104:0 "Boleslav"
- PROV6105:0 "Caslav"
+ PROV6105:0 "Hory Kutné"
  PROV6106:0 "Znojmo"
  PROV6107:0 "Troppau"
  PROV6108:0 "Nisa"
