Trade company fixes

--- a/localisation/gecko_trade_l_english.yml
+++ b/localisation/gecko_trade_l_english.yml
@@ -22,6 +22,7 @@
  astrakhan:0 "Astrakhan"
  siberia:0 "Siberia"
  kiev:0 "Kiev"
+ kazan:0 "Kazan"
  laplata:0 "Rio de La Plata"
  brazil:0 "Brazil"
  amazonas_node:0 "Amazonas"
@@ -143,6 +144,9 @@
  trade_company_kiev:0 "Ruthenian Charter"
  TRADE_COMPANY_KIEV_Root_Culture_GetName:0 "[Root.Culture.GetName] Ruthenia Company"
  TRADE_COMPANY_KIEV_European_Trade_Company:0 "Ruthenia Trade Company"
+ trade_company_kazan:0 "Ural Charter"
+ TRADE_COMPANY_KAZAN_Root_Culture_GetName:0 "[Root.Culture.GetName] Ural Company"
+ TRADE_COMPANY_KAZAN_Europe_Trade_Company:0 "Ural Trade Company"
  trade_company_novgorod:0 "Muscovy Charter"
  TRADE_COMPANY_NOVGOROD_Root_Culture_GetName:0 "[Root.Culture.GetName] Muscovy Company"
  TRADE_COMPANY_NOVGOROD_European_Trade_Company:0 "Muscovy Trade Company"
