--- a/localisation/X_l_english.yml
+++ b/localisation/X_l_english.yml
@@ -454,18 +454,20 @@
  # Russia
  ####################
  #Decisions
- X_RUS_isolation:0 "Current §YIsolation Level§!: §R[Root.X_RUS_isolation_vs_westernization_localization_variable.GetValue]§!"
- X_RUS_westernization:0 "Current §YWesternization Level§!: §G[Root.X_RUS_isolation_vs_westernization_localization_variable.GetValue]§!"
- X_RUS_isolation_vs_westernization_decision_title:0 "[Root.GetXRUSIsolationVsWesternization]"
+ X_RUS_isolation:0 "§R[Root.X_RUS_isolation_vs_westernization_localization_variable.GetValue]§!"
+ X_RUS_westernization:0 "§G[Root.X_RUS_isolation_vs_westernization_localization_variable.GetValue]§!"
+ X_RUS_isolation_vs_westernization_decision_title:0 "Promote Societal Change ([Root.GetXRUSIsolationVsWesternization])"
  X_RUS_isolation_vs_westernization_decision_desc:0 "[Root.GetXRUSIsolationVsWesternizationEffects]"
- X_RUS_isolation_4_cmod_effects:0 "Having an §YIsolation Level§! of §R[Root.X_RUS_isolation_vs_westernization_localization_variable.GetValue]§! gives us the following effects:\nTrade Efficiency: §R-10.0%§!\nMissionary Strength: §G+5.0%§!\nInfantry Combat Ability: §G+10.0%§!\nTechnology Cost: §R+10.0%§!\nInstitution Spread: §R-50.0%§!\nManpower in Primary Culture provinces: §G+25.0%§!\nManpower in same Culture Group provinces: §G+25.0%§!"
- X_RUS_isolation_3_cmod_effects:0 "Having an §YIsolation Level§! of §R[Root.X_RUS_isolation_vs_westernization_localization_variable.GetValue]§! gives us the following effects:\nTrade Efficiency: §R-7.5%§!\nMissionary Strength: §G+4.0%§!\nInfantry Combat Ability: §G+7.5%§!\nTechnology Cost: §R+7.5%§!\nInstitution Spread: §R-37.5%§!\nManpower in Primary Culture provinces: §G+20.0%§!\nManpower in same Culture Group provinces: §G+20.0%§!"
- X_RUS_isolation_2_cmod_effects:0 "Having an §YIsolation Level§! of §R[Root.X_RUS_isolation_vs_westernization_localization_variable.GetValue]§! gives us the following effects:\nTrade Efficiency: §R-5.0%§!\nMissionary Strength: §G+3.0%§!\nInfantry Combat Ability: §G+5.0%§!\nTechnology Cost: §R+5.0%§!\nInstitution Spread: §R-25.0%§!\nManpower in Primary Culture provinces: §G+15.0%§!\nManpower in same Culture Group provinces: §G+15.0%§!"
- X_RUS_isolation_1_cmod_effects:0 "Having an §YIsolation Level§! of §R[Root.X_RUS_isolation_vs_westernization_localization_variable.GetValue]§! gives us the following effects:\nTrade Efficiency: §R-2.5%§!\nMissionary Strength: §G+2.0%§!\nInfantry Combat Ability: §G+2.5%§!\nTechnology Cost: §R+2.5%§!\nInstitution Spread: §R-12.5%§!\nManpower in Primary Culture provinces: §G+10.0%§!\nManpower in same Culture Group provinces: §G+10.0%§!"
- X_RUS_westernization_1_cmod_effects:0 "Having a §YWesternization Level§! of §G[Root.X_RUS_isolation_vs_westernization_localization_variable.GetValue]§! gives us the following effects:\nTrade Efficieny: §G+5.0%§!\nLand Force Limit Modifier: §R-10.0%§!\nTechnology Cost: §G-2.5%§!\nInstitution Spread: §G+12.5%§!\nLand Fire Damage: §G+2.5%§!"
- X_RUS_westernization_2_cmod_effects:0 "Having a §YWesternization Level§! of §G[Root.X_RUS_isolation_vs_westernization_localization_variable.GetValue]§! gives us the following effects:\nTrade Efficieny: §G+10.0%§!\nLand Force Limit Modifier: §R-15.0%§!\nTechnology Cost: §G-5.0%§!\nInstitution Spread: §G+25.0%§!\nLand Fire Damage: §G+5.0%§!"
- X_RUS_westernization_3_cmod_effects:0 "Having a §YWesternization Level§! of §G[Root.X_RUS_isolation_vs_westernization_localization_variable.GetValue]§! gives us the following effects:\nTrade Efficieny: §G+15.0%§!\nLand Force Limit Modifier: §R-20.0%§!\nTechnology Cost: §G-7.5%§!\nInstitution Spread: §G+37.5%§!\nLand Fire Damage: §G+7.5%§!"
- X_RUS_westernization_4_cmod_effects:0 "Having a §YWesternization Level§! of §G[Root.X_RUS_isolation_vs_westernization_localization_variable.GetValue]§! gives us the following effects:\nTrade Efficieny: §G+20.0%§!\nLand Force Limit Modifier: §R-25.0%§!\nTechnology Cost: §G-10.0%§!\nInstitution Spread: §G+50.0%§!\nLand Fire Damage: §G+10.0%§!"
+ X_RUS_isolation_4_cmod_effects:0 "Our current §YIsolation Level§! of §R[Root.X_RUS_isolation_vs_westernization_localization_variable.GetValue]§! gives us the following effects:\nTrade Efficiency: §R-10.0%§!\nMissionary Strength: §G+5.0%§!\nInfantry Combat Ability: §G+10.0%§!\nTechnology Cost: §R+10.0%§!\nInstitution Spread: §R-50.0%§!\nManpower in Primary Culture provinces: §G+25.0%§!\nManpower in same Culture Group provinces: §G+25.0%§!"
+ X_RUS_isolation_3_cmod_effects:0 "Our current §YIsolation Level§! of §R[Root.X_RUS_isolation_vs_westernization_localization_variable.GetValue]§! gives us the following effects:\nTrade Efficiency: §R-7.5%§!\nMissionary Strength: §G+4.0%§!\nInfantry Combat Ability: §G+7.5%§!\nTechnology Cost: §R+7.5%§!\nInstitution Spread: §R-37.5%§!\nManpower in Primary Culture provinces: §G+20.0%§!\nManpower in same Culture Group provinces: §G+20.0%§!"
+ X_RUS_isolation_2_cmod_effects:0 "Our current §YIsolation Level§! of §R[Root.X_RUS_isolation_vs_westernization_localization_variable.GetValue]§! gives us the following effects:\nTrade Efficiency: §R-5.0%§!\nMissionary Strength: §G+3.0%§!\nInfantry Combat Ability: §G+5.0%§!\nTechnology Cost: §R+5.0%§!\nInstitution Spread: §R-25.0%§!\nManpower in Primary Culture provinces: §G+15.0%§!\nManpower in same Culture Group provinces: §G+15.0%§!"
+ X_RUS_isolation_1_cmod_effects:0 "Our current §YIsolation Level§! of §R[Root.X_RUS_isolation_vs_westernization_localization_variable.GetValue]§! gives us the following effects:\nTrade Efficiency: §R-2.5%§!\nMissionary Strength: §G+2.0%§!\nInfantry Combat Ability: §G+2.5%§!\nTechnology Cost: §R+2.5%§!\nInstitution Spread: §R-12.5%§!\nManpower in Primary Culture provinces: §G+10.0%§!\nManpower in same Culture Group provinces: §G+10.0%§!"
+ X_RUS_westernization_1_cmod_effects:0 "Our current §YWesternization Level§! of §G[Root.X_RUS_isolation_vs_westernization_localization_variable.GetValue]§! gives us the following effects:\nTrade Efficieny: §G+5.0%§!\nLand Force Limit Modifier: §R-10.0%§!\nTechnology Cost: §G-2.5%§!\nInstitution Spread: §G+12.5%§!\nLand Fire Damage: §G+2.5%§!"
+ X_RUS_westernization_2_cmod_effects:0 "Our current §YWesternization Level§! of §G[Root.X_RUS_isolation_vs_westernization_localization_variable.GetValue]§! gives us the following effects:\nTrade Efficieny: §G+10.0%§!\nLand Force Limit Modifier: §R-15.0%§!\nTechnology Cost: §G-5.0%§!\nInstitution Spread: §G+25.0%§!\nLand Fire Damage: §G+5.0%§!"
+ X_RUS_westernization_3_cmod_effects:0 "Our current §YWesternization Level§! of §G[Root.X_RUS_isolation_vs_westernization_localization_variable.GetValue]§! gives us the following effects:\nTrade Efficieny: §G+15.0%§!\nLand Force Limit Modifier: §R-20.0%§!\nTechnology Cost: §G-7.5%§!\nInstitution Spread: §G+37.5%§!\nLand Fire Damage: §G+7.5%§!"
+ X_RUS_westernization_4_cmod_effects:0 "Our current §YWesternization Level§! of §G[Root.X_RUS_isolation_vs_westernization_localization_variable.GetValue]§! gives us the following effects:\nTrade Efficieny: §G+20.0%§!\nLand Force Limit Modifier: §R-25.0%§!\nTechnology Cost: §G-10.0%§!\nInstitution Spread: §G+50.0%§!\nLand Fire Damage: §G+10.0%§!"
+ #Decision Tooltips
+ X_RUS_isolation_vs_westernization_decision_tt:0 "Have not forcefully changed your §YIsolation Level§! or §YWesternization Level§! for at least §Y50§! years."
  #Estates
  x_rus_estate_streltsy:0 "Streletskaya"
  x_rus_estate_streltsy_desc:0 ""
@@ -527,6 +529,10 @@
  desc_X_RUS_westernization_3_cmod:0 ""
  X_RUS_westernization_4_cmod:0 "Westernization Level: 4"
  desc_X_RUS_westernization_4_cmod:0 ""
+ X_RUS_forced_isolation_cmod:0 "Forced Isolation"
+ desc_X_RUS_forced_isolation_cmod:0 ""
+ X_RUS_forced_westernization_cmod:0 "Forced Westernization"
+ desc_X_RUS_forced_westernization_cmod:0 ""
  #Monuments
  X_RUS_trinity_lavra:0 "Trinity Lavra"
  X_RUS_trinity_lavra_title:0 "Trinity Lavra"
@@ -536,6 +542,11 @@
  X_RUS_events.2.d1:0 "Thus did [Root.Monarch.GetTitle] [Root.Monarch.GetName] advance with all his host against his domain of Novgorod because of the rebellious spirit of its people, their pride and conversion to Latinism. With a great and overwhelming force did he occupy the entire territory of Novgorod from frontier to frontier, inflicting on every part of it the dread powers of his fire and sword."
  X_RUS_events.2.a:0 "Even the bell"
  X_RUS_events.2.b:0 "A deal with Marfa"
+ X_RUS_events.3.t:0 "Societal Change"
+ X_RUS_events.3.d1:0 ""
+ X_RUS_events.3.a:0 "Promote our traditions"
+ X_RUS_events.3.b:0 "Enforce Western practices"
+ X_RUS_events.3.c:0 "Perhaps another time..."
  #Event Tooltips
  X_RUS_event_2_tt:0 "Every owned province of §Y[NOV.GetName]§! is ceded to §Y[Root.GetName]§!, and gets '§YHanseatic Decline§!', giving the following effects:\nLocal Unrest: §R+2.00§!\nLocal Goods Produced Modifier: §R-25.0%§!"
  #Tooltips
