--- a/localisation/emperor_estates_l_english.yml
+++ b/localisation/emperor_estates_l_english.yml
@@ -83,6 +83,8 @@
  desc_estate_burghers_monopoly_of_textiles_mod:2 "The state has granted the [Root.Owner.GetBurghersName] monopoly rights over textile production."
  estate_nobles_junker_primacy:1 "Junker Supremacy"
  estate_nobles_strong_duchies:0 "Strong Duchies"
+ estate_maratha_subject_rights:0 "Subject Rights"
+ estate_rajput_subject_rights:0 "Subject Rights"
  estate_nobles_golden_liberty:0 "Golden Liberty"
  estate_nobles_veto_heir_apparent:0 "Veto of Heir Apparent"
  estate_burghers_the_great_privilege:0 "The Great Privilege"
@@ -124,6 +126,8 @@
  estate_nobles_pacta_conventa:0 "Pacta Conventa"
  estate_dhimmi_grant_liberties:0 "Grant [Root.GetDhimmiName] Liberties"
  estate_dhimmi_grant_liberties_desc:0 "The [Root.GetDhimmiName] are a minority faction in our state with the power of the majority of the heathens within our borders. By granting them some liberties we can secure their loyalty to us."
+ estate_jains_grant_liberties:0 "Grant [Root.GetJainsName] Liberties"
+ estate_jains_grant_liberties_desc:0 "The [Root.GetJainsName] are a minority wihtin our state, but hold a lot of financial power. By granting them some liberties we can secure their loyalty to us."
  brahmins_hindu_loyalty_modifier:1 "[Country.GetBrahminsName] Loyalty Equilibrium"
  brahmins_muslim_loyalty_modifier:1 "[Country.GetBrahminsName] Loyalty Equilibrium"
  brahmins_other_loyalty_modifier:1 "[Country.GetBrahminsName] Loyalty Equilibrium"
@@ -158,6 +162,7 @@
  estate_land_seized:0 "Seizure of Estate Land"
  ESTATES_SALE_OF_TITLES_DESC:0 "Sell of §Y10% Crown Land§! to the §YEstates§!."
  ESTATES_SEIZE_LAND_DESC:0 "Will seize §Y5% Estate Land§! for the §YCrown§!."
+ ESTATES_SEIZE_LAND_EXCEPTION_DESC:0 "Estates which are §YExempted from Seize Land§! will NOT lose loyalty."
  ESTATES_SEIZE_LAND_UNREST_DESC:0 "Estate share of development will receive §R+5§! §YUnrest§! and the most influential Estate will foolishly take up arms against you."
  IS_NOT_MOST_POWERFUL_ESTATE:0 "$ESTATE$ is not the most powerful estate."
  IS_MOST_POWERFUL_ESTATE:0 "$ESTATE$ is the most powerful estate."
@@ -173,6 +178,7 @@
  crown_land_level_7:0 "Crown Land Ownership"
  crown_land_level_8:0 "Crown Land Ownership"
  crown_land_level_9:0 "Crown Land Ownership"
+ crown_land_level_10:0 "Crown Land Ownership"
  estate_privileges_and_agendas_events.2.name:0 "Estate Statutory Rights"
  estate_privileges_and_agendas_events.2.desc:0 "The Estates of [Root.GetName] have come forth offering a compromise to [Root.Monarch.GetTitle] [Root.Monarch.GetName] to solve the weak control that the [Root.GovernmentName] exercises over the land. In exchange for control, the Estates demand certain liberties..."
  estate_privileges_and_agendas_events.2.a:0 "Honestly what did you expect when you sold out the entire country?"
@@ -320,9 +326,9 @@
  estate_vaisyas_patronage_of_the_arts:0 "Patronage of the Arts"
  estate_nomadic_tribes_primacy_to_the_bannermen:0 "Primacy of the Bannermen"
  estate_nobles_supremacy_over_crown_effect_tooltip:0 "§YEstates§! can give §YAgendas§! without the §YDiet§! having been summoned."
- estate_church_for_the_faith_effect_tooltip:2 "Morale of Armies: §G+5%§! when at war with heretics or heathens.\n\nMorale of Armies: §R-5%§! if at peace with heretics and heathens for 15 years"
- estate_brahmins_for_the_faith_effect_tooltip:2 "Morale of Armies: §G+5%§! when at war with heretics or heathens.\n\nMorale of Armies: §R-5%§! if at peace with heretics and heathens for 15 years"
- estate_brahmins_flexible_deities_revoke_tooltip:1 "The decision that allows you to change your Personal Deity every §Y20§! years at the cost of §Y25§! legitimacy will be disabled."
+ estate_church_for_the_faith_effect_tooltip:3 "Morale of Armies: §G+5%§! when at war with heretics or heathens.\n\nMorale of Armies: §R-5%§! if at peace with heretics and heathens for 15 years\n\n§YOnly one of the two morale modifiers is active at a time.§!"
+ estate_brahmins_for_the_faith_effect_tooltip:3 "Morale of Armies: §G+5%§! when at war with heretics or heathens.\n\nMorale of Armies: §R-5%§! if at peace with heretics and heathens for 15 years\n\n§YOnly one of the two morale modifiers is active at a time.§!"
+ estate_brahmins_flexible_deities_revoke_tooltip:2 "The decision that allows you to change your Personal Deity every §Y20§! years at the cost of §Y25§! legitimacy (or its equivalent for other governments) will be disabled."
  estate_maratha_levies:0 "Increased Levies"
  estate_maratha_levies_for_muslims:0 "Increased Maratha Recruitment"
  estate_maratha_levies_for_muslims_effect_tooltip:1 "Every owned province of §YHindu§! faith gains §Y'Increased Maratha Recruitment'§!, giving the following effects:\nLocal Manpower Modifier: §G+30.0%§!"
@@ -1050,6 +1056,8 @@
  estate_nobles_right_of_counsel_desc:0 "The [Root.GetNobilityName] must have the right to speak to the [Root.Monarch.GetTitle] openly and freely, without fear of repercussions."
  estate_nobles_french_strong_duchies_desc:0 "France is a decentralized nation in which local dukes and counts have considerable independence from the [Root.Monarch.GetTitle]. This system has its benefits but makes maintaining the primacy of royal power a significant challenge."
  estate_nobles_strong_duchies_desc:0 "[Root.GetUsableNameCap] is a decentralized nation in which local dukes and counts have considerable independence from the [Root.Monarch.GetTitle]. This system has its benefits but makes maintaining the primacy of royal power a significant challenge."
+ estate_maratha_subject_rights_desc:0 "[Root.GetUsableNameCap] is a decentralized state in which remote provinces are governed by subjects with considerable independence from the [Root.Monarch.GetTitle]. This system has its benefits but makes maintaining the primacy of royal power a significant challenge."
+ estate_rajput_subject_rights_desc:0 "[Root.GetUsableNameCap] is a decentralized state in which remote provinces are governed by subjects with considerable independence from the [Root.Monarch.GetTitle]. This system has its benefits but makes maintaining the primacy of royal power a significant challenge."
  estate_church_religious_state_desc:0 "By making matters of religion our foremost priority, we shall forge our nation into a more cohesive whole."
  estate_church_independent_inquisition_desc:0 "A key role of the [Root.GetClergyName] is to advise the [Root.Monarch.GetTitle]. Formalizing this arrangement would ease the process and allow their wisdom to better serve the [Root.GovernmentName], although it would also grant them unlimited access to the ear of the [Root.Monarch.GetTitle]."
  estate_church_new_world_mission_desc:0 "The New World is teeming with heathens. It is the calling of the [Root.GetClergyName] to bring the truth of the [Root.Religion.GetName] faith to these lands."
