--- a/localisation/X_l_english.yml
+++ b/localisation/X_l_english.yml
@@ -2,6 +2,21 @@
  ####################
  # General
  ####################
+ #Buildings
+ X_local_building_development_tier_1_pmod:0 "Local Investment"
+ X_local_building_development_tier_2_pmod:0 "Local Investment"
+ X_local_building_development_tier_3_pmod:0 "Local Investment"
+ X_local_building_development_tier_4_pmod:0 "Local Investment"
+ X_local_building_development_tier_5_pmod:0 "Local Investment"
+ X_local_building_development_tier_6_pmod:0 "Local Investment"
+ X_local_building_development_tier_7_pmod:0 "Local Investment"
+ X_local_building_development_tier_8_pmod:0 "Local Investment"
+ X_local_building_development_tier_9_pmod:0 "Local Investment"
+ X_local_building_development_tier_10_pmod:0 "Local Investment"
+ X_local_building_development_tier_11_pmod:0 "Local Investment"
+ X_local_building_development_tier_12_pmod:0 "Local Investment"
+ #Building Tooltips
+ X_local_building_development_cost_effect_tt:0 "Local Development Cost: §G-1.0%§!"
  #Tooltips
  X_center_of_trade_effect_tt:0 "Add the equivalent Center of Trade upgrade cost to your treasury."
  X_flatland_terrain_trigger_tt:0 "Province(s) is §lFlatland§! terrain."
