--- a/localisation/gecko_government_l_english.yml
+++ b/localisation/gecko_government_l_english.yml
@@ -38,7 +38,7 @@
  #common
  gecko_building_dev:0 "Invest in the Provinces"
  gecko_building_dev_desc:0 "Buildings give a small amount of local development cost."
- building_dev:0 "Development from buildings enabled."
+ mechanic_building_dev_yes:0 "Each building in a province gives -1% Local Development Cost."
  #persia#
  persian_theocracy:0 "Persian Theocracy"
  persian_theocracy_desc:0 "After declaring our lands to be a bastion of Shi'ism, we must now launch a vigorous campaign to convert those who would oppose the true faith, ridding our kingdom of the Sunni population by either persuasion or force. Political and religious power will remain completely intertwined, and encapsulated in the person of the Shah."
