--- a/localisation/text_l_english.yml
+++ b/localisation/text_l_english.yml
@@ -1352,6 +1352,7 @@
  chinese_steppe:0 "Asian Steppe Cavalry"
  coehorn_mortar:0 "Coehorn Mortar"
  war_canoe:0 "War Canoe"
+ war_canoeDESCR:0 "A multitude of small boats, used to transport warriors across the sea."
  cog:0 "Cog"
  creek_arquebusier:0 "Creek Arquebusier"
  culverin:0 "Culverin"
@@ -1840,7 +1841,7 @@
  HRE_ELECTOR:0 "§Y$NAME$§W is an Elector in the Holy Roman Empire. They would currently support the ruler of §Y$VOTE$§W as emperor, should the current one die."
  HRE_MEMBER:0 "§Y$NAME$§W is a member of the Holy Roman Empire."
  HRE_FREE_CITY:0 "§Y$NAME$§W is a Free City in the Holy Roman Empire."
- HRE_RELATION:0 "$NAME$ give us §Y$POINTS$§W when ranking of who they want to vote for as the next Emperor."
+ HRE_RELATION:1 "$NAME$ give us §Y$POINTS$§W points when ranking of who they want to vote for as the next Emperor."
  EMPEROR_BENEFIT:0 "Being emperor gives the following benefits:\n"
  NUM_OF_PRINCES:0 "The §Y$TOTAL$§! Princes and §Y$CITIES$§! Free Cities in the Empire give the following to the Emperor:\n"
  HRE_NUM_MEMBERS:1 "These are the member states of the Empire."
@@ -3012,12 +3013,13 @@
  temples_influence:1 "Commanderies Faction Influence"
  enuchs_influence:1 "Trade Faction Influence"
  bureaucrats_influence:1 "Secretariat Faction Influence"
- CAN_NOT_BUILD_COLONIES:0 "Can build Colonies"
- CAN_NOT_BUILD_BUILDINGS:0 "Can build buildings"
- CAN_NOT_BUILD_MISSIONARIES:0 "Can send missionaries"
- CAN_NOT_DECLARE_WAR:0 "Can declare war"
- CAN_NOT_SEND_MERCHANTS:0 "Can send merchants"
- CAPED_BY_FORCELIMIT:0 "Can build over Force Limit"
+ MODIFIER_CAN_NOT_BUILD_COLONIES:1 "Can NOT establish Colonies"
+ MODIFIER_CAN_NOT_BUILD_BUILDINGS:1 "Can NOT build buildings"
+ MODIFIER_CAN_NOT_BUILD_MISSIONARIES:1 "Can NOT send missionaries"
+ MODIFIER_CAN_NOT_DECLARE_WAR:1 "Can NOT declare war"
+ MODIFIER_CAN_NOT_SEND_MERCHANTS:1 "Can NOT send merchants"
+ MODIFIER_CAPED_BY_FORCELIMIT:1 "Can NOT build over Force Limit"
+ 
  ESTATE_INFLUENCE_GREATER_THAN:0 "§Y$ESTATE$§W influence is §Y$VALUE$§W or greater"
  ESTATE_INFLUENCE_NOT_GREATER_THAN:0 "§Y$ESTATE$§W influence is lower than §Y$VALUE$§W"
  COUNTRY_HAS_ESTATE:0 "$COUNTRY|Y$ has the $ESTATE|Y$ Estate."
@@ -3746,7 +3748,7 @@
  CONVERT_HEIR_TO_GENERAL_EFFECT:0 "Convert Heir to General with §Y$POWER$§W tradition.\n"
  GUARANTEE_EFFECT:0 "Guarantee §Y$WHO$§W.\n"
  ROYAL_MARRIAGE_EFFECT:0 "Royal Marriage with §Y$WHO$§W.\n"
- ALLIANCE_EFFECT:0 "Alliance with §Y$WHO$§W.\n"
+ ALLIANCE_EFFECT:0 "Alliance with $WHO|Y$.\n"
  REMOVE_RELIGIOUS_REFORMS_EFFECT:0 "§Y$COUNTRY$§! loses $AMOUNT$ religious reforms.\n"
  CREATE_ADMIRAL_EFFECT:0 "Gain Admiral with §Y$POWER$§W tradition.\n"
  CREATE_EXPLORER_EFFECT:0 "Gain Explorer with §Y$POWER$§W tradition.\n"
@@ -4097,8 +4099,8 @@
  NUM_BLOCKADING_LESS_THAN_COMP:0 "Fewer ports blockaded than $COUNTRYNAME|Y$ ($BLOCKADEDCOUNT|Y$). Currently $CURRENTBLOCKADES|Y$."
  HAVE_LESS_MANPOWER_THAN:0 "Have less Manpower than "
  HAVE_MORE_MANPOWER_THAN:0 "Manpower at least "
- HAVE_LESS_SAILORS_THAN:0 "Have less Sailors than "
- HAVE_MORE_SAILORS_THAN:0 "Sailors at least "
+ HAVE_LESS_SAILORS_THAN:1 "Have less Sailors than $AMOUNT|Y$"
+ HAVE_MORE_SAILORS_THAN:1 "Have at least $AMOUNT|Y$ Sailors"
  HAVE_LESS_LOANS_THAN:0 "Number of Loans less than "
  HAVE_MORE_LOANS_THAN:0 "Number of Loans at least "
  HAVE_LESS_COT_THAN:0 "Number of COTs less than "
@@ -4397,11 +4399,11 @@
  POLICIESTRIGGER_LESS_THAN:0 " policy slider less than "
  POLICIESTRIGGER_GREATER_THAN:0 " policy slider at least "
  HAVE_MORE_MANPOWER_THEN_MAXIMUM:0 "Have at least max manpower"
- HAVE_LESS_MANPOWER_THEN_MAXIMUM:0 "Have less then max manpower"
- HAVE_MORE_SAILORS_THEN_MAXIMUM:0 "Have at least max sailors"
- HAVE_LESS_SAILORS_THEN_MAXIMUM:0 "Have less then max sailors"
- HAVE_LESS_SAILORSPERCENT_THAN:0 "Sailor level less than "
- HAVE_MORE_SAILORSPERCENT_THAN:0 "Sailor level at least "
+ HAVE_LESS_MANPOWER_THEN_MAXIMUM:1 "Have less than max manpower"
+ HAVE_MORE_SAILORS_THEN_MAXIMUM:1 "Have at least $AMOUNT|Y$ max sailors"
+ HAVE_LESS_SAILORS_THEN_MAXIMUM:1 "Have less than $AMOUNT|Y$ max sailors"
+ HAVE_LESS_SAILORSPERCENT_THAN:1 "Have less Sailors than $AMOUNT|Y$"
+ HAVE_MORE_SAILORSPERCENT_THAN:1 "Have at least $AMOUNT|Y$ Sailors"
  IS_NOT_REVOLUTIONARY_TARGET:0 "Is NOT revolutionary target"
  IS_REVOLUTIONARY_TARGET:0 "Is revolutionary target"
  THERE_IS_NOT_A_REVOLUTIONARY_TARGET_IN_THE_WORLD:0 "There is no revolutionary target in the world"
@@ -6090,10 +6092,10 @@
  enlightened_despotism_ruler_manchu:0 "Emperor"
  enlightened_despotism_ruler_female_manchu:0 "Empress"
  UNIT_DETACH_SIEGE:0 "§YDetach Siege§!"
- UNIT_DETACH_MERC:1 "§YDetach Marines!"
- DETMER_NONE:1 "There are no marines in this army to detach."
- DETMER_ALL:1 "This army consists entirely of marines."
- DETMER_EXPL:1 "All marines from this unit will be detached and form a separate unit."
+ UNIT_DETACH_MERC:3 "§YDetach Special Units!§!"
+ DETMER_NONE:2 "There are no special units in this army to detach."
+ DETMER_ALL:2 "This army consists entirely of special units."
+ DETMER_EXPL:2 "All special units from this unit will be detached and form a separate unit."
  DETSIEG_NOSIEGE:0 "There is no siege in this province."
  DETSIEG_NOTENOUGH:0 "This army does not have enough units to detach that could form a proper siege force."
  DETSIEG_EXPL:0 "This will detach enough units to execute a siege properly."
@@ -6379,8 +6381,8 @@
  DIPLO_SKILL_IMPACT:0 "When negotiating diplomatically with other countries, this is also modified by §Y$VALUE$§W, due to..."
  PREVIOUS_MISSION_WASNT:0 "The last mission was not "
  PREVIOUS_MISSION_WAS:0 "The last mission was "
- NATIONAL_FOCUS_IS_NOT:0 "National Focus is NOT set to "
- NATIONAL_FOCUS_IS:0 "National Focus is set to "
+ NATIONAL_FOCUS_IS_NOT:1 "National Focus is NOT set to $FOCUS|Y$"
+ NATIONAL_FOCUS_IS:1 "National Focus is set to $FOCUS|Y$"
  WARTAX_CANT_STOP_TIP:0 "We are already collecting War Taxes until "
  more_merchants:0 "Recruitment of Merchants"
  desc_more_merchants:0 "All our efforts are currently focused on the recruitment of more merchants"
@@ -6434,7 +6436,7 @@
  create_the_compagnies_ordonnance_desc:0 "If we were to draw up a set of rules that codified exactly what is required to provide troops for our army, this will streamline the recruitment of mercenaries making the process cheaper."
  desc_compagnies_ordonnance:0 "The codification of exactly what support was required to support 100 knights for the army, these 700 men blocks would form the basis of the future companies."
  the_staple_port:0 "The Staple Port"
- desc_the_staple_port:0 "We have granted Calais exclusive rights to import English wool onto the continent. This has dramatically increase revenues from the port."
+ desc_the_staple_port:0 "We have granted Calais exclusive rights to import English wool onto the continent. This has dramatically increased revenues from the port."
  the_theme_system:0 "The Theme System"
  desc_the_theme_system:0 "A civil and military administrative system that offered land in return for an agreement for military service. It means we do not have to resort to conscription, making recruitment easier."
  desc_vornedskab:0 "The Danes introduced 'Vornedskap' or Serfdom as it's known in English relatively late compared to the rest of Europe. However, it was rather effective and important for shaping the Danish state."
@@ -7172,14 +7174,17 @@
  NOCLAIMNOTSAMEDYNASTY:0 "We do not have the same ruling dynasty as them"
  reichsreform_title:0 "Call for Reichsreform"
  reichsreform_desc:0 "Reform the Empire to a more centralized model."
+ reichsreform_province:0 "Reichsreform"
  reichsregiment_title:0 "Institute Reichsregiment"
  reichsregiment_desc:0 "Consolidate the Imperial Diet, and reduce the legislative complexity."
+ reichsregiment_province:0 "Reichsregiment"
  gemeinerpfennig_title:0 "Enact Gemeiner Pfennig"
  gemeinerpfennig_desc:0 "Require member states of the HRE to levy a special tax to be paid directly to the Emperor."
  hofgericht_title:0 "Reform the Hofgericht"
  hofgericht_desc:0 "Reduce legislative independence by making the Emperor the final legal authority within the Empire."
  landfriede_title:0 "Ewiger Landfriede"
  landfriede_desc:0 "Force member states to solve their disputes in courts of law, rather than on battlefields."
+ landfriede_province:0 "Ewiger Landfriede"
  privilegia_de_non_appelando_title:0 "Revoke The Privilegia"
  privilegia_de_non_appelando_desc:0 "Revoke The Privilege of Non-Appeal."
  erbkaisertum_title:0 "Proclaim Erbkaisertum"
@@ -7526,8 +7531,8 @@
  desc_rome_reborn:0 "Like a Phoenix from the ashes, The Roman Empire thrones above the world. For the first time since Charlemagne, there is an undisputed and absolute Emperor of The Holy Roman Empire. The thousand flags of Germany divided have all stopped waving before the one, singular, flag of Rome reborn. Ave Caesar!"
  build_lubeck_krantor_title:0 "The Lübeck Krantor"
  build_lubeck_krantor_desc:0 "With wealth pouring into Lübeck, the port facilities are starting to look under-dimensioned. While it would cost nearly a whole year's income, a Krantor (a massive harbor crane) could greatly improve our trading potential."
- krantor_crane:0 "The Lübeck Krantor"
- desc_krantor_crane:0 "We have erected a massive harbor crane here in Lübeck, which helps us load and unload ships."
+ krantor_crane:1 "The Krantor"
+ desc_krantor_crane:1 "We have erected a massive harbor crane here in [Root.GetCapitalName], which helps us load and unload ships."
  commission_adler_von_lubeck_title:0 "The 'Adler von Lübeck'"
  commission_adler_von_lubeck_desc:0 "On account of the ongoing war in the region, our shipwrights have presented plans for a new warship: The 'Adler von Lübeck'. The ship is massive, with more gunports than any other ship afloat in the Western world. Building it would be expensive, but our navy would be unrivaled in the Baltic for quite some time."
  adler_von_lubeck:0 "The 'Adler von Lübeck'"
@@ -7774,7 +7779,7 @@
  PROVINCEVIEW_OTHERS_TRADE_PORT:0 "This is $COUNTRY$'s Main Trade City."
  CHURCH_POWER:1 "Church Power: $POWER|Y$"
  CHURCH_OF:0 "Church of $COUNTRY$"
- CHURCH_POWER_MONTHLY:0 "$DIFF$ each month (base §Y$SKILL$§! monarch power * §Y$SCALE$§! modified $MOD$)\n\nThe following modifiers apply:\n"
+ CHURCH_POWER_MONTHLY:1 "$DIFF$ each month:\nBase: §Y$SKILL$§! monarch power * §Y$SCALE$§!"
  NO_ASPECT_SELECTED:0 "No Aspect of Faith chosen"
  CHANGE_ASPECT_TOO_LOW_POWER:2 "§RYou need at least $COST$ Church Power to be able to apply another $ASPECTS_SHORT$§! (currently have $CURRENT|Y$)\n"
  CHANGE_ASPECT_TOO_LOW_STAB:1 "§RYou need to have at least $MIN$ stability to be able to remove an $ASPECTS_SHORT$§!\n"
@@ -8101,7 +8106,8 @@
  HAS_NOT_PASHA:0 "does not have a Pasha"
  RANDOM_LOGS_ENABLED:0 "Random log is enabled"
  HARDOOS_ENABLED:0 "Hard OOS is enabled"
- EFFECT_ADD_TRIGGERED_MODIFIER:0 ""
+ EFFECT_ADD_TRIGGERED_MODIFIER:2 "§Y$PROV$§! gets the conditional modifier '§Y$MODIFIER$§!' giving the following effects:\n$VALUE$\n\n"
+ EFFECT_REMOVE_TRIGGERED_MODIFIER:1 "$PROV$ loses the conditional modifier '§Y$MODIFIER$§!'."
  alandalus_returns:0 "Qurtuba Restored"
  desc_alandalus_returns:0 "The pristine city has once again been wrested from the hands of the infidel. So long as it is held by one of the faithful, all those who follow the Prophet will look on us with gratitude."
  TOTAL_PIPS:0 "Total Pips"
