the most devious of changes

--- a/localisation/X_l_english.yml
+++ b/localisation/X_l_english.yml
@@ -611,6 +611,8 @@
  desc_X_POR_portugese_renaissance_cmod:0 ""
  X_POR_manueline_architecture_cmod:0 "Manueline Architecture"
  desc_X_POR_manueline_architecture_cmod:0 ""
+ X_POR_proto_colonialism_cmod:0 "Proto-Colonialism"
+ desc_X_POR_proto_colonialism_cmod:0 ""
  #Estate Modifiers
  X_POR_estate_nobility_mission_2_lmod:0 "A New Age for Heroism"
  ####################
