--- a/localisation/gecko_powers_and_ideas_l_english.yml
+++ b/localisation/gecko_powers_and_ideas_l_english.yml
@@ -1,3 +1,5 @@
 ﻿l_english: 
  maritime_ideas:0 "Humanist Ideas"
  maritime_ideas_bonus:0 "Full Humanist"
+gc_compagnies_ordonnance:0 "The Compagnies d'Ordonnance"
+gc_compagnies_ordonnance_desc:0 "Originally created by the French Monarchy to regularize the recruitment of troops. If we bring this into Burgundy, we will streamline the recruitment of troops. §G+15% Available Mercenaries§!" 
