--- a/localisation/gecko_mercs_l_english.yml
+++ b/localisation/gecko_mercs_l_english.yml
@@ -6,3 +6,4 @@
  gecko_merc_black_army_2:0 "Black Army Cavalry Reserve"
  gecko_merc_aristo_ideas:0 "Local Cavalry Company"
  gc_merc_sekban:0 "Sekban Reserve"
+ unlock_merc_mesopotamian_mamluks_tt:0 "Unlock the mercenary company §YMesopotamian Mamluks§! to recruit."
