highland dev cost priv buffed

--- a/localisation/gecko_privileges_l_english.yml
+++ b/localisation/gecko_privileges_l_english.yml
@@ -3,7 +3,7 @@
   #Ethiopia
   estate_gecko_ethiopia_highlands_and_mountains:0 "Temper the Roof of Africa"
   estate_gecko_ethiopia_highlands_and_mountains_desc:0 "We will Temper the Roof of Africa and one day we will pierce the Heavens."
-  gecko_ethiopia_highlands_and_mountains_privilege_tooltip:0 "This privilege will grant -5% development cost on Highlands and Mountains."
+  gecko_ethiopia_highlands_and_mountains_privilege_tooltip:0 "This privilege will grant §G-10%§! development cost on Highlands and Mountains."
   gecko_ethiopia_highlands_and_mountains_privilege_revoke_tooltip:0 "Will remove any Modifier granted by this Privilege."
 
  ###nomad estate changes###
