--- a/localisation/gecko_events_l_english.yml
+++ b/localisation/gecko_events_l_english.yml
@@ -191,3 +191,11 @@
 gecko.43.t:0 "A New Center of Trade!"
 gecko.43.d:0 "After some deliberations, our merchants have successfully made $PROVINCE$ a center of trade."
 gecko.43.a:0 "Good."
+
+#morocco tunis
+
+gecko.48.t:0 "Capitulation of Tunis"
+gecko.48.d:0 "Inshallah! Thus did [Root.Monarch.GetTitle] [Root.Monarch.GetName] advance with all his might against the Emirate of Tunis. With a great and overwhelming force did he occupy the entire territory of Tunis from frontier to frontier, uniting the Maghreb once and for all!
+gecko.48.2.a:0 "Let us take direct control of the Emirate."
+gecko.48.2.b:0 "Administrate the Emirate from afar with limited concessions."
+gecko.48_2_tt:0 "Every owned province of §Y[TUN.GetName]§! is ceded to §Y[Root.GetName]§!"
