--- a/localisation/gecko_decisions_l_english.yml
+++ b/localisation/gecko_decisions_l_english.yml
@@ -105,8 +105,8 @@ splendor_mercs_1_desc:0 "Allows further Mercenary recruitment to Mercenary Force
 splendor_mercs_2_title:0 "§Y2. Hire Further Mercenaries§!"
 splendor_mercs_2_desc:0 "Hire Mercenaries in bulk."
 
-Show_Merc_limit_title:0 "§Y1. Show Mercenary Forcelimit§!"
-Show_Merc_limit_desc:0 "This is our Mercenary Forcelimit. If we go over this, any newly created Mercenary Company will be disbanded with no refund."
+Show_Merc_limit_title:0 "§Y1. Mercenary Force Limit: ([Root.geckomercvalue.GetValue]/[Root.geckomercFL.GetValue])§!"
+Show_Merc_limit_desc:0 "This is our Mercenary Force Limit. If we go over this, any newly created Mercenary Company will be disbanded with no refund."
 gecko_merc_limit_tt:0 "Manually Update Mercenary Forcelimit"
 gecko_increased_merc_limit_tt:0 "This will §GIncrease our Available Mercenaries by +15%§!, but they will have -§R15.0% Morale§! for 10 Years."
 gecko_decreased_merc_limit_tt:0 "This will §RDecrease our Available Mercenaries by -15%§!, but they will have +§G10.0% Combat Ability§! for 10 Years."
