morocco can use more spanish monuments. monument buffs to spain.

--- a/localisation/X_l_english.yml
+++ b/localisation/X_l_english.yml
@@ -427,7 +427,7 @@
  X_CRI_events.6.d1:0 ""
  X_CRI_events.6.a:0 "A Khan's palace"
  X_CRI_events.7.t:0 "Genoa Cedes Gazaria"
- X_CRI_events.7.d1:0 "In response to the growing Turkish threat, the Republic of Genoa has ceded sovereignty of Gazaria to the Bank of Saint George, believing them to more capable of organizing a defense against the Turks."
+ X_CRI_events.7.d1:0 "In response to the growing Turkish threat, the Republic of Genoa has ceded sovereignty of Gazaria to the Bank of Saint George, believing them to be more capable of organizing a defense against the Turks."
  X_CRI_events.7.a:0 "A foolish decision..."
  X_CRI_events.8.t:0 "Negotiations with the Bank of Saint George"
  X_CRI_events.8.d1:0 ""
