little timmy sails with the barbary pirates

--- a/localisation/gecko_trade_l_english.yml
+++ b/localisation/gecko_trade_l_english.yml
@@ -34,7 +34,7 @@
  krakow:0 "Krakow"
  panama:0 "Panama"
  carribean_trade:0 "Carribean"
- tunis:0 "Algiers"
+ tunis:0 "Barbary Coast"
  genua:0 "Italy"
  wien:0 "Wien"
  saxony:0 "Prague"
