morocco mission update

--- a/localisation/gecko_missions_l_english.yml
+++ b/localisation/gecko_missions_l_english.yml
@@ -426,11 +426,10 @@ repulse_gank_bur_desc:0 ""
 
 gc_gc_mor_palace_title:0 "Develop Sugar and Cloth"
 gc_gc_mor_palace_desc:0 ""
-mor_own_develop_clothes_and_salt_ct:0 "[Root.GetName] gets '§YSugar and Cloth Main Production§!' for §Y25 years§!, giving the following effects:\nGlobal Trade Power: §G+15.0%§!\nEvery owned province which produces §YSugar§! or §YCloth§!:\nLocal Goods Produced: §G+0.5§! and \nLocal Development Cost: §G-5.0%§!"
+mor_own_develop_clothes_and_salt_ct:0 "[Root.GetName] gets '§YSugar and Cloth Main Production§!' for §Y20 years§!, giving the following effects:\nGlobal Trade Power: §G+15.0%§!\n\nEvery owned province which produces §YSugar§! or §YCloth§! gets '§YAccelerated Production§!' for §Y20 years§!, giving the following effects:\nLocal Goods Produced: §G+0.5§!\nLocal Development Cost: §G-5.0%§!"
 gc_mor_flagship_title:0 "Launch a Flagship"
 gc_mor_flagship_desc:0 ""
 gc_mor_sugar_cloth_production:0 "Accelerated Production"
-gc_mor_sugar_cloth_production_tt:0 "Lasts until the country modifier §YSalt and Cloth Main Production§! expires."
 gc_mor_sugar_cloth_trader:0 "Sugar and Cloth Main Production"
 desc_gc_mor_cloth_trader:0 "We have focused a great portion of our manufactories and workshops in the production of salt and cloth, which brings us a significant advantage in the trade nodes."
 gc_mor_italy_conquest_title:0 "Italian Conquest"
