little timmy time travels to 1.28 but goes cyberpsycho omega giga trade change of hell

--- a/localisation/gecko_trade_l_english.yml
+++ b/localisation/gecko_trade_l_english.yml
@@ -12,11 +12,6 @@
  lahore_trade:0 "Samarkand"
  aleppo:0 "Aleppo"
  basra:0 "Arabia"
- gulf_of_aden:0 "Gulf of Aden"
- zanzibar:0 "Zanzibar"
- african_great_lakes:0 "Great Lakes"
- kongo:0 "Kongo"
- cape_of_good_hope:0 "Cape of Good Hope"
  constantinople:0 "Anatolia"
  novgorod:0 "Moscow"
  astrakhan:0 "Astrakhan"
@@ -35,7 +30,7 @@
  panama:0 "Panama"
  carribean_trade:0 "Carribean"
  tunis:0 "Barbary Coast"
- genua:0 "Italy"
+ genua:0 "Mediterranean"
  wien:0 "Wien"
  saxony:0 "Prague"
  gc_south_germany_tradenode:0 "Swabia"
